--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,6 @@
--- Primitives return boolean if hit. Also determines the point. These t_val checks are getting dumb.
-Tests:
--- cone_test at deg > 70 
--- refractivity test
--- nonhier.lua
--- cylinder test upright
+DODOs:
 
 Make martini
-
 
 
 Past Issues:
@@ -18,3 +12,16 @@ epsilon check.
 
 -- Full cylinder and shadows weren't rendered. Changed min hit count to 1 from 2. Also had to change
 t_val check to check that both t vals were greater than 0.001 to prevent random shadows.
+
+
+-- Mesh does not cast shadow on itself. This happened because the intersection for boxes only consider
+the min t val, which could be behind the eye.
+
+
+Completed TODOs:
+--Primitives return boolean if hit. Also determines the point. These t_val checks are getting dumb.
+Tests:
+cone_test at deg > 70 
+refractivity test
+nonhier.lua
+cylinder test upright
